# swc-ts-stack-checker

./: .gitignore  Cargo.toml
src/: main.rs
