[package]
name = "swc-ts-stack-checker"
version = "0.1.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
swc_atoms = "0.2"
swc_common = { version = "0.9", features = ["concurrent", "tty-emitter"] } 
swc_ecma_parser = "0.33"
tempfile = "3.1.0"
tokio = { version = "0.2", features = ["rt-core", "process", "macros", "blocking", "fs"] }
github-rs = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.5"